# injamm

./: .clangd  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  README.md  SYNTAX.md  bench-after.txt  bench-baseline.txt  vcpkg-configuration.json  vcpkg.json
.agent-session-logs/: macos-ci-investigation.md
.commandcode/taste/: taste.md
.commandcode/taste/workflow/: taste.md
.github/workflows/: ci.yml
.opencode/plans/: 1780965038121-proud-sailor.md  1780965981262-shiny-circuit.md  1780973010491-swift-sailor.md  1781141847586-kind-river.md
cmake/: injammConfig.cmake.in
docs/: USE_CASES.md
docs/plans/: 2026-06-11-glz-error-handling.md
docs/superpowers/plans/: 2026-06-08-at-root-key-plan.md  2026-06-08-string-filters-plan.md  2026-06-09-if-filter-chain.md  2026-06-10-at-var-preprocessor.md  2026-06-11-nttp-ct-bytecode-plan.md  2026-06-19-injamm-sqlite3.md
docs/superpowers/specs/: 2026-06-08-at-root-key-design.md  2026-06-08-string-filters-design.md  2026-06-10-at-var-preprocessor-design.md  2026-06-11-nttp-ct-bytecode-design.md  2026-06-19-resultset-template-design.md
examples/: bench_delegate.cpp  benchmark.cpp  example.cpp  example_zip.cpp
ext/injamm-sqlite3/: CMakeLists.txt  README.md
ext/injamm-sqlite3/cmake/: injamm-sqlite3Config.cmake.in
ext/injamm-sqlite3/include/injamm/sqlite3/: adapter.hpp  concept.hpp  engine.hpp  executor.hpp
ext/injamm-sqlite3/tests/: CMakeLists.txt  test_mock.cpp  test_sqlite3.cpp
fuzz/: injamm_fuzz.cpp
fuzz/corpus/: seed04.txt  seed05.txt  seed06.txt  seed07.txt  seed08.txt  seed09.txt  seed10.txt  seed11.txt  seed12.txt  seed15.txt  seed16.txt  seed17.txt  seed18.txt  seed19.txt  seed20.txt  seed21.txt
include/: injamm.hpp
include/injamm/: bytecode.hpp  bytecode_compile.hpp  bytecode_ct_compile.hpp  bytecode_debug.hpp  bytecode_exec.hpp  bytecode_io.hpp  chunk.hpp  ct_chunk.hpp  ct_parse.hpp  ct_render.hpp  enum_io.hpp  escape.hpp  escape_hatch.hpp  filters.hpp  glz_dispatch.hpp  injamm.hpp  loop_state.hpp  parse.hpp  serialize_value.hpp  test_main.hpp  types.hpp
include/injamm/detail/: bytecode.hpp  bytecode_compile.hpp  bytecode_exec.hpp  chunk.hpp  ct_chunk.hpp  ct_parse.hpp  ct_render.hpp  escape.hpp  loop_state.hpp  parse.hpp  resolve.hpp  serialize_value.hpp  types.hpp
test_codegen/: bench_codegen_vs_others.cpp  codegen_helpers.hpp  render1.hpp  render2.hpp  render3.hpp  render4.hpp  render5.hpp  render_bench.hpp  render_ext1.hpp  render_ext2.hpp  render_ext3.hpp  render_ext4.hpp  render_ext5.hpp  render_t1.hpp  render_t10.hpp  render_t2.hpp  render_t3.hpp  render_t4.hpp  render_t5.hpp  render_t6.hpp  render_t7.hpp  render_t8.hpp  render_t9.hpp  test_codegen.cpp  test_codegen_extended.cpp
tests/: test_ct_overload.cpp  test_injamm.cpp  test_injamm_ct.cpp  test_injamm_ja.cpp
util/: injamm_bc.cpp  injamm_codegen.cpp  test_ct_if.cpp
