if(EMSCRIPTEN)
  # catch2_emscripten_core は親スコープで定義済み
  set(_catch2_targets catch2_emscripten_core)
  set(_need_custom_main TRUE)
else()
  find_package(Catch2 CONFIG REQUIRED)
  include(Catch)
  set(_catch2_targets Catch2::Catch2 Catch2::Catch2WithMain)
  set(_need_custom_main FALSE)
endif()

# Mock test (no real SQLite3 needed)
add_executable(injamm-sqlite3_mock_test test_mock.cpp)
if(_need_custom_main)
  target_sources(injamm-sqlite3_mock_test PRIVATE ${CMAKE_SOURCE_DIR}/tests/em_catch2_main.cpp)
endif()
target_link_libraries(injamm-sqlite3_mock_test PRIVATE injamm-sqlite3 ${_catch2_targets})
if(EMSCRIPTEN)
  target_compile_options(injamm-sqlite3_mock_test PRIVATE "-sNO_DISABLE_EXCEPTION_CATCHING")
else()
  catch_discover_tests(injamm-sqlite3_mock_test)
endif()
add_test(NAME injamm-sqlite3_mock_test COMMAND injamm-sqlite3_mock_test)

# Real sqlite3 test (requires system SQLite3, not available on Emscripten)
if(NOT EMSCRIPTEN)
  find_package(SQLite3 REQUIRED)
  add_executable(injamm-sqlite3_test test_sqlite3.cpp)
  target_link_libraries(injamm-sqlite3_test PRIVATE injamm-sqlite3 Catch2::Catch2WithMain SQLite3::SQLite3)
  catch_discover_tests(injamm-sqlite3_test)
  add_test(NAME injamm-sqlite3_test COMMAND injamm-sqlite3_test)
endif()
